--- a/htmlPages/addEmployeePayroll.html
+++ b/htmlPages/addEmployeePayroll.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/addEmployee.css">
+    <script type="text/javascript" src="../js/EmployeePayroll.js"></script>
+    <script type="text/javascript" src="../js/FormValidation.js"></script>
     <title>Employee Payroll Form</title>
 </head>
 <body>  
@@ -20,13 +22,14 @@
     </header>
 
     <div class="form-content">
-        <form class="form" action="#" onsubmit="save();return false">
+        <form class="form" action="#" onsubmit="save();return false;" onreset="resertForm();">
             <div class="form-head">
                 <header>Employee Payroll Form</header>
             </div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your Name.." required>
+                <error-output class="text-error error-output" for="text"></error-output>
             </div>
 
             <div class="row-content">
@@ -52,7 +55,7 @@
 
             </div>
 
-            <div class="row-content" style="margin-top: 30px;">
+            <div class="row-content" style="margin-top: 25px;">
                 <label class="label text" for="gender">Gender</label>
                 <div>
                     <input type="radio" id="male" value="male" name="gender">
@@ -65,24 +68,24 @@
             <div class="row-content" style="margin-top: 30px;">
                 <label class="label text" for="department">Department</label>
                 <div>
-                    <input type="checkbox" id="hr" name="hr" value="HR">
+                    <input type="checkbox" id="hr" name="department" value="HR">
                     <label class="text" for="hr">HR</label>
 
-                    <input type="checkbox" id="sales" name="sales" value="Sales">
+                    <input type="checkbox" id="sales" name="department" value="Sales">
                     <label class="text" for="sales">Sales</label>
 
-                    <input type="checkbox" id="finance" name="finance" value="Finance">
+                    <input type="checkbox" id="finance" name="department" value="Finance">
                     <label class="text" for="finance">Finance</label>
 
-                    <input type="checkbox" id="engineer" name="engineer" value="Engineer">
+                    <input type="checkbox" id="engineer" name="department" value="Engineer">
                     <label class="text" for="engineer">Engineer</label>
 
-                    <input type="checkbox" id="others" name="others" value="Others">
+                    <input type="checkbox" id="others" name="department" value="Others">
                     <label class="text" for="others">Others</label>
                 </div>
             </div>
 
-            <div class="row-content" style="margin-top: 30px;">
+            <div class="row-content" style="margin-top: 20px;">
                 <label class="label text" for="department">Choose Your Salary</label>
                 <input class="input" type="range" name="salary" id="salary" 
                 min="300000" max="500000" step="1000" value="400000">
@@ -93,6 +96,7 @@
                 <label class="label text" for="date">Start Date</label>
                 <div>
                     <select id="day" name="Day">
+                        <option>Day</option>
                         <option value="1">1</option>
                         <option value="1">2</option>
                         <option value="1">3</option>
@@ -126,6 +130,7 @@
                         <option value="1">31</option>  
                     </select>
                     <select id="month" name="Month">
+                        <option>Month</option>
                         <option value="Jan">Jan</option>
                         <option value="Feb">Feb</option>
                         <option value="March">March</option>
@@ -140,16 +145,21 @@
                         <option value="Dec">dec</option>
                     </select>
                     <select id="year" name="Year">
+                        <option>Year</option>
+                        <option value="2020">2022</option>
+                        <option value="2020">2021</option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
                         <option value="2018">2018</option>
                         <option value="2017">2017</option>
                         <option value="2016">2016</option>
                     </select>
+                    <error-output class="date-error" for="text"></error-output>
                 </div>
+               
             </div>
 
-            <div class="row-content">
+            <div class="row-content" style="margin-top: 30px;">
                     <label class="label text" for="notes">Notes</label>
                     <textarea id="notes" name="Notes" class="input" placeholder=""
                     style="height: 100px;">
@@ -158,11 +168,14 @@
 
             <div class="button-parent">
                 <a href="./employeePayroll.html" class="resertButton button cancelButton">Cancle</a>
-                <div>
+                <div class="submit-reset">
                     <button class="button submitButton" type="submit">Submit</button>
                     <button class="button resertButton" type="reset">Reset</button>
                 </div>
             </div>
+
+             
+            </script> 
 
         </form>
     </div>
