--- a/htmlPages/employeePayroll.html
+++ b/htmlPages/employeePayroll.html
@@ -8,7 +8,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/my_home.css">
         <script type="text/javascript" src="../js/my_home.js"></script>
-        <title>Employee Payroll Form</title>
+        <script type="text/javascript" src="../js/utility.js"></script>
+        <script type="text/javascript" src="../js/site_properties.js"></script><title>Employee Payroll Form</title>
     </head>
     <body>  
         <header class="header-content header">
@@ -31,9 +32,7 @@
         </div>
 
         <div class="table-main">
-            <table class="table" id="display">
-               
-            </table>
+            <table class="table" id="display"></table>
         </div>
 </body>
 </html>
